--- a/RuzzleResolver/AndroidManifest.xml
+++ b/RuzzleResolver/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="se.sandberg.ruzzleresolver.MainActivity"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,6 +26,10 @@
         <activity
             android:name="se.sandberg.ruzzleresolver.ResultsActivity"
             android:label="@string/title_activity_results" >
+        </activity>
+        <activity
+            android:name="se.sandberg.ruzzleresolver.PathActivity"
+            android:label="@string/title_activity_path" >
         </activity>
     </application>
 
