--- a/RuzzleResolver/AndroidManifest.xml
+++ b/RuzzleResolver/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="se.sandberg.ruzzleresolver.MainActivity"
+            android:name="se.sandberg.ruzzleresolver.activities.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -24,11 +24,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="se.sandberg.ruzzleresolver.ResultsActivity"
+            android:name="se.sandberg.ruzzleresolver.activities.ResultsActivity"
             android:label="@string/title_activity_results" >
         </activity>
         <activity
-            android:name="se.sandberg.ruzzleresolver.PathActivity"
+            android:name="se.sandberg.ruzzleresolver.activities.PathActivity"
             android:label="@string/title_activity_path" >
         </activity>
     </application>
