--- a/RuzzleResolver/AndroidManifest.xml
+++ b/RuzzleResolver/AndroidManifest.xml
@@ -25,11 +25,13 @@
         </activity>
         <activity
             android:name="se.sandberg.ruzzleresolver.activities.ResultsActivity"
-            android:label="@string/title_activity_results" >
+            android:label="@string/title_activity_results" 
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="se.sandberg.ruzzleresolver.activities.PathActivity"
-            android:label="@string/title_activity_path" >
+            android:label="@string/title_activity_path" 
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
