Autofocus next char, added clear button, removed titles.

--- a/RuzzleResolver/AndroidManifest.xml
+++ b/RuzzleResolver/AndroidManifest.xml
@@ -11,27 +11,29 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
         <activity
             android:name="se.sandberg.ruzzleresolver.activities.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" 
+            android:theme="@android:style/Theme.Light.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>           
         </activity>
         <activity
             android:name="se.sandberg.ruzzleresolver.activities.ResultsActivity"
             android:label="@string/title_activity_results" 
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Light">
         </activity>
         <activity
             android:name="se.sandberg.ruzzleresolver.activities.PathActivity"
             android:label="@string/title_activity_path" 
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Light.NoTitleBar">
         </activity>
     </application>
 
